[workspace]
members = [
  "actix-codec",
  "actix-macros",
  "actix-rt",
  "actix-server",
  "actix-service",
  "actix-tls",
  "actix-tracing",
  "actix-utils",
  "bytestring",
  "local-channel",
  "local-waker",
]
resolver = "2"

[patch.crates-io]
actix-codec = { path = "actix-codec" }
actix-macros = { path = "actix-macros" }
actix-rt = { path = "actix-rt" }
actix-server = { path = "actix-server" }
actix-service = { path = "actix-service" }
actix-tls = { path = "actix-tls" }
actix-tracing = { path = "actix-tracing" }
actix-utils = { path = "actix-utils" }
bytestring = { path = "bytestring" }
local-channel = { path = "local-channel" }
local-waker = { path = "local-waker" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
