[workspace]
resolver = "2"
members = [
  "actix-codec",
  "actix-macros",
  "actix-rt",
  "actix-server",
  "actix-service",
  "actix-tls",
  "actix-tracing",
  "actix-utils",
  "bytestring",
  "local-channel",
  "local-waker",
]

[workspace.package]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[patch.crates-io]
actix-codec = { path = "actix-codec" }
actix-macros = { path = "actix-macros" }
actix-rt = { path = "actix-rt" }
actix-server = { path = "actix-server" }
actix-service = { path = "actix-service" }
actix-tls = { path = "actix-tls" }
actix-tracing = { path = "actix-tracing" }
actix-utils = { path = "actix-utils" }
bytestring = { path = "bytestring" }
local-channel = { path = "local-channel" }
local-waker = { path = "local-waker" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[workspace.lints.rust]
rust-2018-idioms = "deny"
nonstandard-style = "deny"
future-incompatible = "deny"
missing-docs = { level = "warn", priority = -1 }

[workspace.lints.clippy]
uninlined-format-args = "warn"
disallowed-names = "warn"
