[package]
name = "actix-connect"
version = "2.0.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "TCP connector service for Actix ecosystem."
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-connect/"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["openssl", "rustls", "uri"]

[lib]
name = "actix_connect"
path = "src/lib.rs"

[features]
default = ["uri"]

# openssl
openssl = ["open-ssl", "tokio-openssl"]

# rustls
rustls = ["rust-tls", "tokio-rustls", "webpki"]

# support http::Uri as connect address
uri = ["http"]

[dependencies]
actix-service = "1.0.6"
actix-codec = "0.3.0"
actix-utils = "2.0.0"
actix-rt = "1.1.1"

derive_more = "0.99.2"
either = "1.5.3"
futures-util = { version = "0.3.4", default-features = false }
# FIXME: update to 0.3
http = { version = "0.2.2", optional = true }
log = "0.4"
# FIXME: Use release version
trust-dns-proto = { git = "https://github.com/bluejekyll/trust-dns", branch = "main" }
trust-dns-resolver = { git = "https://github.com/bluejekyll/trust-dns", branch = "main" }

# openssl
open-ssl = { package = "openssl", version = "0.10", optional = true }
tokio-openssl = { version = "0.6.0", optional = true }

# rustls
rust-tls = { package = "rustls", version = "0.19.0", optional = true }
tokio-rustls = { version = "0.22.0", optional = true }
webpki = { version = "0.21", optional = true }

[dev-dependencies]
bytes = "1"
actix-testing = "1.0.0"
futures-util = { version = "0.3.4", default-features = false, features = ["sink"] }
