[package]
name = "actix-macros"
version = "0.2.1"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Ibraheem Ahmed <ibrah1440@gmail.com>",
]
description = "Macros for Actix system and runtime"
repository = "https://github.com/actix/actix-net"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
syn = { version = "^1", features = ["full"] }

[dev-dependencies]
actix-rt = "2.0.0"

futures-util = { version = "0.3.7", default-features = false }
trybuild = "1"
