[package]
name = "actix-macros"
version = "0.2.3"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Ibraheem Ahmed <ibrah1440@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Macros for Actix system and runtime"
repository = "https://github.com/actix/actix-net.git"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
actix-rt = "2"

futures-util = { version = "0.3.17", default-features = false }
rustversion = "1"
trybuild = "1"
