[package]
name = "actix-macros"
version = "0.2.4"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Ibraheem Ahmed <ibrah1440@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Macros for Actix system and runtime"
repository = "https://github.com/actix/actix-net"
categories = ["network-programming", "asynchronous"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.cargo-machete]
ignored = [
    "proc_macro2", # specified for minimal versions compat
]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }

# minimal versions compat
[target.'cfg(any())'.dependencies]
proc-macro2 = "1.0.60"

[dev-dependencies]
actix-rt = "2"
futures-util = { version = "0.3.17", default-features = false }
rustversion-msrv = "0.100"
trybuild = "1"
