[package]
name = "actix-router"
version = "0.4.0"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Ali MJ Al-Nasrawy <alimjalnasrawy@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Resource path matching library"
keywords = ["actix", "router", "routing"]
repository = "https://github.com/actix/actix-net.git"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_router"
path = "src/lib.rs"

[features]
default = ["http"]

[dependencies]
bytestring = ">=0.1.5, <2"
either = "1.6"
http = { version = "0.2.3", optional = true }
log = "0.4"
regex = "1.5"
serde = "1"

[dev-dependencies]
http = "0.2.3"
serde = { version = "1", features = ["derive"] }
