[package]
name = "actix-rt"
version = "2.7.0"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
    "fakeshadow <24548779@qq.com>",
]
description = "Tokio-based single-threaded async runtime for the Actix ecosystem"
keywords = ["async", "futures", "io", "runtime"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "actix_rt"
path = "src/lib.rs"

[features]
default = ["macros"]
macros = ["actix-macros"]
experimental-io-uring = ["tokio-uring"]

# deprecated `experimental-io-uring` alias
io-uring = ["experimental-io-uring"]

[dependencies]
actix-macros = { version = "0.2.3", optional = true }

futures-core = { version = "0.3", default-features = false }
tokio = { version = "1.13.1", features = ["rt", "net", "parking_lot", "signal", "sync", "time"] }

# runtime for `experimental-io-uring` feature
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.13.1", features = ["full"] }
hyper = { version = "0.14.10", default-features = false, features = ["server", "tcp", "http1"] }
