[package]
name = "actix-rt"
version = "2.10.0"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Tokio-based single-threaded async runtime for the Actix ecosystem"
keywords = ["async", "futures", "io", "runtime"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "actix_macros::*",
    "tokio::*",
]

[features]
default = ["macros"]
macros = ["actix-macros"]
io-uring = ["tokio-uring"]

[dependencies]
actix-macros = { version = "0.2.3", optional = true }

futures-core = { version = "0.3", default-features = false }
tokio = { version = "1.23.1", features = ["rt", "net", "parking_lot", "signal", "sync", "time"] }

# runtime for `io-uring` feature
[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1.23.1", features = ["full"] }
