[package]
name = "actix-tls"
version = "3.0.4"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "TLS acceptor and connector services for Actix ecosystem"
keywords = ["network", "tls", "ssl", "async", "transport"]
repository = "https://github.com/actix/actix-net.git"
categories = ["network-programming", "asynchronous", "cryptography"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "actix_tls"
path = "src/lib.rs"

[features]
default = ["accept", "connect"]

# enable acceptor services
accept = []

# enable connector services
connect = []

# use openssl impls
openssl = ["tls-openssl", "tokio-openssl"]

# use rustls impls
rustls = ["tokio-rustls", "webpki-roots"]

# use native-tls impls
native-tls = ["tokio-native-tls"]

# support http::Uri as connect address
uri = ["http"]

[dependencies]
actix-rt = { version = "2.2", default-features = false }
actix-service = "2"
actix-utils = "3"

futures-core = { version = "0.3.7", default-features = false, features = ["alloc"] }
impl-more = "0.1"
pin-project-lite = "0.2.7"
tokio = "1.18.4"
tokio-util = "0.7"
tracing = { version = "0.1.30", default-features = false, features = ["log"] }

# uri
http = { version = "0.2.3", optional = true }

# openssl
tls-openssl = { package = "openssl", version = "0.10.9", optional = true }
tokio-openssl = { version = "0.6", optional = true }

# rustls
tokio-rustls = { version = "0.23", optional = true }
webpki-roots = { version = "0.22", optional = true }

# native-tls
tokio-native-tls = { version = "0.3", optional = true }

[dev-dependencies]
actix-codec = "0.5"
actix-rt = "2.2"
actix-server = "2"
bytes = "1"
env_logger = "0.10"
futures-util = { version = "0.3.17", default-features = false, features = ["sink"] }
log = "0.4"
rcgen = "0.10"
rustls-pemfile = "1"
tokio-rustls = { version = "0.23", features = ["dangerous_configuration"] }
trust-dns-resolver = "0.22"

[[example]]
name = "accept-rustls"
required-features = ["accept", "rustls"]
