[package]
name = "actix-tracing"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]
description = "Support for tokio tracing with Actix services"
keywords = ["network", "framework", "tracing"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net/tree/master/actix-tracing"
documentation = "https://docs.rs/actix-tracing"
categories = ["network-programming", "asynchronous"]
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "actix_service::*",
    "actix_utils::*",
    "tracing::*",
    "tracing_futures::*",
]

[dependencies]
actix-service = "2"
actix-utils = "3"

tracing = "0.1.35"
tracing-futures = "0.2"

[dev_dependencies]
actix-rt = "2"
slab = "0.4"
