[package]
name = "actix-utils"
version = "3.0.1"
authors = [
    "Nikolay Kim <fafhrd91@gmail.com>",
    "Rob Ede <robjtede@icloud.com>",
]
description = "Various utilities used in the Actix ecosystem"
keywords = ["network", "framework", "async", "futures"]
categories = ["network-programming", "asynchronous"]
repository = "https://github.com/actix/actix-net"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
pin-project-lite = "0.2"
local-waker = "0.1"

[dev-dependencies]
actix-rt = "2"
futures-util = { version = "0.3.17", default-features = false }
static_assertions = "1.1"
